# esp_puf_s3

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
bootloader_components/puf_boot/: CMakeLists.txt  puf_boot.c  puf_boot.ld
main/: CMakeLists.txt  main.c
main/attestation/: puf_attest.c  puf_attest.h
main/capture/: puf_capture.c  puf_capture.h  puf_mfrc522.c  puf_mfrc522.h
main/integrity/: puf_integrity.c  puf_integrity.h  puf_wenc.c  puf_wenc.h
main/kdf/: puf_kdf.c  puf_kdf.h
main/network/: puf_mqtt.c  puf_mqtt.h  puf_wifi.c  puf_wifi.h
main/reconcile/: bch.c  bch.h  linux_compat.h  puf_reconcile.c  puf_reconcile.h
tools/: verifier.py  verifier_mqtt.py
